--- a/hospilar/.classpath
+++ b/hospilar/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Inmetrics.LP1439/AppData/Roaming/Skype/My Skype Received Files/mysql-connector-java-5.1.18.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
