--- a/hospilar/.classpath
+++ b/hospilar/.classpath
@@ -13,7 +13,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry excluding="main/java/|test/java/" kind="src" path="src"/>
-	<classpathentry including="mysql-connector-java-5.1.18.jar" kind="src" path="Resources"/>
+	<classpathentry including="mysql-connector-java-5.1.18.jar|rs2xml.jar" kind="src" path="Resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
